@@ -9,21 +9,22 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.File;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class MapperTargetTest extends TestCore {
+    final static Logger logger = LoggerFactory.getLogger(MapperTargetTest.class);
     private static int PORTNUMBER_SPARQL;
     private static int PORTNUMBER_API;
     private FusekiServer server;
@@ -53,7 +54,7 @@ public class MapperTargetTest extends TestCore {
             assertTrue(firstOutputFile.delete());
             assertTrue(outputFile.delete());
         } catch (Exception e) {
-            e.printStackTrace();
+           logger.warn("Could not delete temporary files {} or {}", firstTempMappingPath, tempMappingPath, e);
         }
     }
 
@@ -129,7 +130,7 @@ public class MapperTargetTest extends TestCore {
         webApi.setExecutor(null); // creates a default executor
         webApi.start();
 
-        String tempMappingPath = replaceSerializationFormatInMappingFile("./web-of-things/serialization/mapping.ttl", "N-Quads");
+        String tempMappingPath = replaceSerializationFormatInMappingFile("N-Quads");
         Map<Term, String> outPaths = new HashMap<>();
         outPaths.put(new NamedNode("http://example.com/rules/#TargetDump"), "./web-of-things/serialization/out-local-file.nq");
         outPaths.put(new NamedNode("rmlmapper://default.store"), "./web-of-things/serialization/out-default.nq");
@@ -142,7 +143,7 @@ public class MapperTargetTest extends TestCore {
             File outputFile = Utils.getFile(tempMappingPath);
             assertTrue(outputFile.delete());
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.warn("Could not delete temporary file {}", tempMappingPath, e);
         }
     }
 
@@ -154,7 +155,7 @@ public class MapperTargetTest extends TestCore {
         webApi.setExecutor(null); // creates a default executor
         webApi.start();
 
-        String tempMappingPath = replaceSerializationFormatInMappingFile("./web-of-things/serialization/mapping.ttl", "Turtle");
+        String tempMappingPath = replaceSerializationFormatInMappingFile("Turtle");
         Map<Term, String> outPaths = new HashMap<>();
         outPaths.put(new NamedNode("http://example.com/rules/#TargetDump"), "./web-of-things/serialization/out-local-file.ttl");
         outPaths.put(new NamedNode("rmlmapper://default.store"), "./web-of-things/serialization/out-default.ttl");
@@ -167,7 +168,7 @@ public class MapperTargetTest extends TestCore {
             File outputFile = Utils.getFile(tempMappingPath);
             assertTrue(outputFile.delete());
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.warn("Could not delete temporary file {}", tempMappingPath, e);
         }
     }
 
@@ -179,7 +180,7 @@ public class MapperTargetTest extends TestCore {
         webApi.setExecutor(null); // creates a default executor
         webApi.start();
 
-        String tempMappingPath = replaceSerializationFormatInMappingFile("./web-of-things/serialization/mapping.ttl", "N-Triples");
+        String tempMappingPath = replaceSerializationFormatInMappingFile("N-Triples");
         Map<Term, String> outPaths = new HashMap<>();
         outPaths.put(new NamedNode("http://example.com/rules/#TargetDump"), "./web-of-things/serialization/out-local-file.nt");
         outPaths.put(new NamedNode("rmlmapper://default.store"), "./web-of-things/serialization/out-default.nt");
@@ -192,7 +193,7 @@ public class MapperTargetTest extends TestCore {
             File outputFile = Utils.getFile(tempMappingPath);
             assertTrue(outputFile.delete());
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.warn("Could not delete temporary file {}", tempMappingPath, e);
         }
     }
 
@@ -205,7 +206,7 @@ public class MapperTargetTest extends TestCore {
         webApi.setExecutor(null); // creates a default executor
         webApi.start();
 
-        String tempMappingPath = replaceSerializationFormatInMappingFile("./web-of-things/serialization/mapping.ttl", "JSON-LD");
+        String tempMappingPath = replaceSerializationFormatInMappingFile("JSON-LD");
         Map<Term, String> outPaths = new HashMap<>();
         outPaths.put(new NamedNode("http://example.com/rules/#TargetDump"), "./web-of-things/serialization/out-local-file.jsonld");
         outPaths.put(new NamedNode("rmlmapper://default.store"), "./web-of-things/serialization/out-default.jsonld");
@@ -218,7 +219,7 @@ public class MapperTargetTest extends TestCore {
             File outputFile = Utils.getFile(tempMappingPath);
             assertTrue(outputFile.delete());
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.warn("Could not delete temporary file {}", tempMappingPath, e);
         }
     }
 
@@ -259,17 +260,17 @@ public class MapperTargetTest extends TestCore {
     private String replaceKeyInMappingFile(String path, String key, String port) {
         try {
             // Read mapping file
-            String mapping = new String(Files.readAllBytes(Paths.get(Utils.getFile(path).getAbsolutePath())), StandardCharsets.UTF_8);
+            String mapping = Files.readString(Paths.get(Utils.getFile(path).getAbsolutePath()),StandardCharsets.UTF_8);
 
             // Replace key in mapping file by new port
             mapping = mapping.replace(key, port);
 
             // Write to temp mapping file
-            String fileName = port + ".ttl";
-            Path file = Paths.get(fileName);
-            Files.write(file, Arrays.asList(mapping.split("\n")));
+            File tempFile = File.createTempFile(port, ".ttl");
+            tempFile.deleteOnExit();
+            Files.writeString(tempFile.toPath(), mapping, StandardCharsets.UTF_8);
 
-            return Paths.get(Utils.getFile(fileName, null).getAbsolutePath()).toString();
+            return tempFile.getAbsolutePath();
         } catch (IOException ex) {
             throw new Error(ex.getMessage());
         }
@@ -278,20 +279,20 @@ public class MapperTargetTest extends TestCore {
         Replaces the "FORMAT" in the given mapping file to the given format and saves this in a new temp file
         Returns the absolute path to the temp mapping file
      */
-    private String replaceSerializationFormatInMappingFile(String path, String format) {
+    private String replaceSerializationFormatInMappingFile(String format) {
         try {
             // Read mapping file
-            String mapping = new String(Files.readAllBytes(Paths.get(Utils.getFile(path).getAbsolutePath())), StandardCharsets.UTF_8);
+            String mapping = Files.readString(Paths.get(Utils.getFile("./web-of-things/serialization/mapping.ttl").getAbsolutePath()), StandardCharsets.UTF_8);
 
             // Replace "FORMAT" in mapping file by new port
             mapping = mapping.replace("FORMAT", format);
 
             // Write to temp mapping file
-            String fileName = format + ".ttl";
-            Path file = Paths.get(fileName);
-            Files.write(file, Arrays.asList(mapping.split("\n")));
+            File tempFile = File.createTempFile(format, ".ttl");
+            tempFile.deleteOnExit();
+            Files.writeString(tempFile.toPath(), mapping, StandardCharsets.UTF_8);
 
-            return Paths.get(Utils.getFile(fileName, null).getAbsolutePath()).toString();
+            return tempFile.getAbsolutePath();
         } catch (IOException ex) {
             throw new Error(ex.getMessage());
         }
